--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -7,6 +7,8 @@
 
 {% block content %}
 <div class="container">
-  <h1 class="heading">الملف الشخصي</h1>
+
+  <h1>الملف الشخصي</h1>
+
 </div>
-{% endblock content %}
+{% endblock %}
