--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,14 @@
                     <i class="fas fa-phone    "></i>
                     اتصل بنا
                 </a></li>
+
+            {% if user.is_authenticated %}
+            <li><a href="{% url 'account_logout' %}" class="list-item">
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                    تسجيل خروج
+                </a></li>
+            {% endif %}
+
             <li class="cta">
                 <a href="" class="btn btn-outline-dark">دخول</a>
                 <a href="" class="btn btn-solid-dark">جديد</a>
@@ -87,17 +95,21 @@
     {% block content %}
     {% endblock content %}
 
+    <div class="container">
 
         {% if messages %}
         <div>
-          <!-- <strong>Messages:</strong> -->
-          <ul>
-            {% for message in messages %}
-            <li>{{message}}</li>
-            {% endfor %}
-          </ul>
+            <!-- <strong>Messages:</strong> -->
+            <ul>
+                {% for message in messages %}
+                <li>{{message}}</li>
+                {% endfor %}
+            </ul>
         </div>
         {% endif %}
+
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
