--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block head_title %}{% trans "تسجيل دخول" %}{% endblock %}
+{% block title %}{% trans "تسجيل دخول" %}{% endblock %}
+
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static './css/signup.css' %}">
+{% endblock stylesheet %}
 
 {% block content %}
 
@@ -11,67 +16,82 @@
 
 <div class="container">
 
-<h1>تسجيل دخول</h1>
+  <!-- <h1>تسجيل دخول</h1> -->
 
-{% get_providers as socialaccount_providers %}
+  {% get_providers as socialaccount_providers %}
 
-<!-- {% if socialaccount_providers %}
+  <!-- {% if socialaccount_providers %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
 of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
 for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> -->
 
-<div class="socialaccount_ballot">
+  <div class="socialaccount_ballot">
 
-  <ul class="socialaccount_providers">
-    <!-- {% include "socialaccount/snippets/provider_list.html" with process="login" %} -->
-  </ul>
+    <ul class="socialaccount_providers">
+      <!-- {% include "socialaccount/snippets/provider_list.html" with process="login" %} -->
+    </ul>
 
-  <!-- <div class="login-or">{% trans 'or' %}</div> -->
-
-</div>
-
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  <div class="container">
-
-    {% csrf_token %}
-    <div class="input">
-      {{ form.login }}
-    </div>
-    <div class="input">
-      {{ form.password }}
-    </div>
-    {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-    {% endif %}
-    <!-- <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a> -->
-    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">هل نسيت كلمة السر؟</a>
-    <br>
-    <br>
-    <!-- <button class="primaryAction btn btn-solid-dark" type="submit">{% trans "Sign In" %}</button> -->
-    <button class="primaryAction btn btn-solid-dark" type="submit">تسجيل دخول</button>
-
+    <!-- <div class="login-or">{% trans 'or' %}</div> -->
 
   </div>
 
-</form>
+  {% include "socialaccount/snippets/login_extra.html" %}
 
-{% if messages %}
-<div>
-  <!-- <strong>Messages:</strong> -->
-  <ul>
-    {% for message in messages %}
-    <li>{{message}}</li>
-    {% endfor %}
-  </ul>
-</div>
-{% endif %}
+  {% else %}
+  <p>{% blocktrans %}If you have not created an account yet, then please
+    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
+  </p>
+  {% endif %}
+
+  <form class="login signup-form" method="POST" action="{% url 'account_login' %}">
+    <div class="container">
+      {% csrf_token %}
+
+      <div class="form-heading">
+        <h2>تسجيل دخول</h2>
+        <a href="{{signup_url}}" class="btn btn-solid-dark">إنشاء حساب</a>
+      </div>
+
+      <br>
+
+      <!-- <div class="fields"> -->
+      {{form.as_p}}
+      <!-- </div> -->
+
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+      <!-- <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a> -->
+      <a class="button secondaryAction" href="{% url 'account_reset_password' %}">هل نسيت كلمة السر؟</a>
+      <br>
+      <!-- <button class="primaryAction btn btn-solid-dark" type="submit">{% trans "Sign In" %}</button> -->
+      <button class="primaryAction btn btn-solid-dark" type="submit">تسجيل دخول</button>
+
+      {% if messages %}
+      <div>
+        <!-- <strong>Messages:</strong> -->
+        <ul>
+          {% for message in messages %}
+          <li>{{message}}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      {% endif %}
+
+    </div>
+
+  </form>
+
+  {% if messages %}
+  <div>
+    <!-- <strong>Messages:</strong> -->
+    <ul>
+      {% for message in messages %}
+      <li>{{message}}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
 
 </div>
 
