--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -55,7 +55,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> -->
       <br>
 
       <!-- <div class="fields"> -->
-      {{form.as_p}}
+      {{form}}
       <!-- </div> -->
 
       {% if redirect_field_value %}
