--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -3,11 +3,11 @@
 {% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block title %}{% trans "أعادة تعيين كلمة المرور" %}{% endblock %}
 
 {% block content %}
 <div class="container">
-<!-- <h1>{% trans "Password Reset" %}</h1> -->
+    <!-- <h1>{% trans "Password Reset" %}</h1> -->
     <h1>إعادة تعيين كلمة المرور</h1>
 
     {% if user.is_authenticated %}
@@ -16,7 +16,7 @@
 
     <!-- <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p> -->
     <p>أرسلنا لك رسالة إعادة تعيين كلمة المرور على بريدك الإلكتروني, إن لم تستلم الرسالة حتى الآن
-    ، قم بالتحقق من قسم الرسائل المزعجة</p>
+        ، قم بالتحقق من قسم الرسائل المزعجة</p>
     <br>
     <p>تواصل معنا في حال لم تستلم رسالة إعادة التعيين</p>
 
