--- a/staticfiles/css/signup.css
+++ b/staticfiles/css/signup.css
@@ -1,6 +1,5 @@
 form {
     max-width: fit-content !important;
-    background: red;
     box-shadow: 4px 4px 20px #32323220;
     margin: 1rem auto;
     /* width: fit-content !important;  */
@@ -27,7 +26,7 @@ form .input {
     position: relative;
 }
 
-form .input input{
+form input{
     width: 100% !important;
     padding-right: 2.5rem;
     height: 50px;
