--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
 
 <style>
-  .public-information {
+  .public-information, .security {
     padding: 1rem;
   }
   .info div {
@@ -49,7 +49,9 @@
           </select>
         </div>
       </div>
-      <a href="#" class="update">تحديث المعلومات</a>
+      <!-- <a href="#" class="update">تحديث المعلومات</a> -->
+      <br>
+      <a href="#" class="btn btn-solid-dark">تحديث المعلومات</a>
   </div>
   <div class="security">
     <h2>الحماية</h2>
