add user info in rate form, add user field to rate table, add edit profile function

--- a/mosannaf/templates/mosannaf/feedbacks.html
+++ b/mosannaf/templates/mosannaf/feedbacks.html
@@ -1,7 +1,7 @@
 {% for feedback in feedbacks %}
 <div class="feedback">
     <div class="feedback-account">
-        <p class="feedback-account__user">ام محمد</p>
+        <p class="feedback-account__user">{{feedback.user}}</p>
         <div class="feedback-account__rate">
             <div class="stars">
                 <i class="fas fa-star "></i>
