--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                     <i class="fas fa-home    "></i>
                     الرئيسية
                 </a></li>
-            <li><a href="#mainwoman" class="list-item">
+            <li><a href="{% url 'mosannaf:all' %}" class="list-item">
                     <i class="fas fa-book    "></i>
                     المصنفات
                 </a></li>
