--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -67,7 +67,15 @@
             {{profile_update.image|as_crispy_field}}
           </div>
         </div>
-        <button type="submit" class="btn btn-solid-dark">تحديث المعلومات</button>
+        <br>
+        <div class="grid">
+          <div class="item" style="display: flex; justify-content: space-between; width: 100%;">
+            <button type="submit" class="btn btn-solid-dark">تحديث المعلومات</button>
+            <a href="" class="btn btn-solid-dark">تغيير كلمة المرور</a>
+          </div>
+          <div class="item"></div>
+          <div class="item"></div>
+        </div>
       </form>
       <!-- <a href="#" class="update">تحديث المعلومات</a> -->
       <br>
