add change pic feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
 					<i class="fas fa-video    "></i>
 					الكورسات
 				</a></li> -->
-            <li><a href="#" class="list-item">
+            <li><a href="{% url 'accounts:profile' %}" class="list-item">
                     <i class="fas fa-user    "></i>
                     الملف الشخصي
                 </a></li>
