--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- main -->
-<main>
+<main style="background: url({{content.main_img.url}});">
     <div class="container">
         <p class="heading intro-title">{{content.main_sentence}}</p>
         <p class="sub-text">{{content.sub_sentence}}</p>
