--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -243,7 +243,7 @@ header .cta .btn {
 
 main {
     height: calc(100vh - 80px); 
-    background: url("../assets/images/main-img1.jpg");
+    /* background: url("../assets/images/main-img1.jpg"); */
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover; 
