--- a/templates/base.html
+++ b/templates/base.html
@@ -126,6 +126,9 @@
     </div>
 
 
+    {% include 'footer.html' %}
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="{% static './js/swiper.js' %}"></script>
