--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,8 @@
 
 
 <footer>
+    <div class="container">
+
     <div class="part1">
         <div>
             <a href="#"><span>مصنف</span></a><br>
@@ -24,7 +26,10 @@
             </ul>
         </div>
     </div>
-    <hr>
+    <div class="container">
+        <hr>
+    </div>
+</div>
 
     <div class="part2">
         <h4 class="copyrights-sentence">جميع الحقوق محفوظة لدى مصنف</h4>
