--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -246,8 +246,7 @@ main {
     /* background: url("../assets/images/main-img1.jpg"); */
     background-position: center center;
     background-repeat: no-repeat !important;
-    background-size: cover; 
-    background-attachment: fixed;
+    background-size: cover !important;
     max-width: 100%;
     display: flex;
     justify-content: center;
