edit footer, main, fix responsive issues

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="swiper-button-next"></div>
 		<div class="swiper-button-prev"></div>
-		<div class="swiper-pagination"></div>
+	<!-- <div class="swiper-pagination"></div> -->
 
 		<!-- <a href="#" class="btn btn-solid-dark">عرض المزيد</a> -->
 	</div>
