--- a/project/static/css/footer.css
+++ b/project/static/css/footer.css
@@ -8,11 +8,12 @@ footer{
     height: auto;
     
 }
+
 footer a{
     text-decoration: none;
     color:var(--primary-color);
-    
 }
+
 footer span{
     font-weight: bold;
     color: var(--primary-color);
@@ -21,17 +22,27 @@ footer span{
 
 
 .part1{
+    /* background: red; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-   line-height: 2;
-   margin-bottom: 1rem;
+    line-height: 2;
+    margin-bottom: 1rem;
 
 }
-.part1 div {flex:1}
+.part1 div {
+    flex:1; 
+    text-align: center;
+}
+
+.part1 div * {
+    display: block;
+}
+
 ul{
     list-style: none;
 }
+
 footer hr{
     margin: 0 auto;
 }
@@ -56,16 +67,20 @@ footer hr{
 
 
 
-
 @media(max-width: 574px) {
-.part1 {
-    max-width: max-content;
-    display: block;
-        
-}
-ul{
-    margin: 0;
-}
+    footer {
+        bottom: auto !important;
+    }
+    
+    .part1 {
+        flex-direction: column;
+        display: flex;
+        width: 100%;   
+    }
+
+    .part1 div {
+        line-height: 2.5;
+    }
 
 
 }
