--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
 
 <body>
 
+<div class="content" style="width:100%; min-height: 100vh !important; position: relative;">
+    
+
     <!-- Start Header -->
 
     <header>
@@ -130,13 +133,19 @@
     
     <!-- {% include 'footer.html' %} -->
 
-    <footer>
+    <footer style="position: absolute; left: 0; bottom: -400px; min-height: 300px; width: 100%;">
         <div class="container">
     
         <div class="part1">
             <div>
-                <a href="#"><span>مصنف</span></a><br>
-                <a href="#">نشاط الشركة</a>
+                <a href="#"><span>مصنف</span></a>
+                <a href="#">الصفحة الرئيسية</a>
+                <a href="#">أسئلة متكررة</a>
+                <a href="#">مركز المساعدة</a>
+                <a href="#">شروط الاستخدام</a>
+                <a href="#">بيان الخصوصية</a>
+                <a href="#">الشروط والأحكام</a>
+
             </div>
             <div> <ul>
                     <li><a href="#">مركز المصنف </a></li>
@@ -167,6 +176,10 @@
     
         </div>
     </footer>
+
+
+
+    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
