--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -242,7 +242,7 @@ header .cta .btn {
 /* main style */
 
 main {
-    height: calc(100vh - 80px); 
+    min-height: calc(100vh - 80px); 
     /* background: url("../assets/images/main-img1.jpg"); */
     background-position: center center;
     background-repeat: no-repeat !important;
@@ -251,6 +251,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 main::after {
     content: "";
@@ -275,19 +276,26 @@ main .container .intro-title {
     color: #f9f9f9;
 }
 
-main .search {
-    position: relative;
+main form {
     width: 630px;
+}
+main .search {
+    width: 100%;
+    position: relative;
+    margin: 0 auto;
 }
 
 main .search input {
-    width: 100%; 
+    max-width: 100%; 
+    width: 100%;
     height: 50px; 
     padding: 0 2rem;
+    margin: 0 auto;
     border-radius: 50px;
     outline: none; 
     border:none; 
     color: #323232;
+    position: relative;
 }
 
 main .search img {
@@ -322,6 +330,7 @@ main .header-cta {
     main .header-cta .btn {
         width: fit-content;
     }   
+
 
 
 }
@@ -407,13 +416,13 @@ main .header-cta {
 
 
 /* this is main responsive rules for container */
-.container {margin: 0 auto; margin-bottom: 1rem;}
+.container {margin: 0 auto; margin-bottom: 1rem; height: fit-content;}
 /* // Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) { 
     .container {
         width: 90% !important;
     }
-    main .search {
+    main form {
         position: relative;
         width: 90%;
     }
@@ -426,6 +435,8 @@ main .header-cta {
     }
     main .search {
         position: relative;
+    }
+    main form {
         width: 90%;
     }
  } 
@@ -434,6 +445,16 @@ main .header-cta {
 @media (min-width: 768px) and (max-width: 991.98px) { 
     .container {
         width: 780px !important;
+    }
+    main form {
+        width: 80%;
+    }
+    main .search {
+        width: 100%;
+        margin: 0 auto;
+    }
+    main .search input {
+        width: 100% !important; 
     }
  }
 
@@ -463,7 +484,8 @@ main .header-cta {
 
 .swiper-pagination {
     position: relative;
-    margin-top: 1rem;
+    display: none;
+    margin-top: 10px;
 }
 
 .book {
