--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -81,7 +81,7 @@
       <br>
       <!-- <a href="#" class="btn btn-solid-dark">تحديث المعلومات</a> -->
   </div>
-  <div class="security">
+  <!-- <div class="security">
     <h2>الحماية</h2>
       <div class="info">
         <div>
@@ -95,6 +95,6 @@
       </div>
     <a href="" class="update" id="upd"> تغيير كلمة المرور</a>
     <a href="#" class="delete">حذف الحساب</a>
-  </div>
+  </div> -->
 </div>
 {% endblock %}
