add categories in sidebar, create dropdown responsive, create category function

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -237,6 +237,11 @@ header .cta .btn {
     z-index: 10000;
 }
 
+.menu-parent {
+    cursor: pointer;
+    user-select: none;
+}
+
 
 
 /* main style */
