add get category view function in views.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,9 @@
                 </a></li>
                 <li><a  class="list-item menu-parent">
                         <i class="fas fa-book    "></i>
-                        المصنفات
+                        <u>
+                            المصنفات
+                        </u>
                     </a></li>
 
                 <div class="sub-menu">
@@ -95,7 +97,7 @@
                         </a>
                     </li>
 
-                    <li><a href="{% url 'mosannaf:category' 'modern science' %}" class="list-item">
+                    <li><a href="{% url 'mosannaf:category' 'modern-science' %}" class="list-item">
                         العلوم الحديثة
                     </a></li>
 
