--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -51,6 +51,12 @@
                 <button type="submit" class="btn btn-solid-dark">{% trans "إنشاء حساب" %} &raquo;</button>
                 <a href="{{login_url}}" class="">دخول</a>
             </div>
+            <div class="cta">
+                <a href="/accounts/google/login" class="btn btn-outline-dark">
+                    <i class="fa-brands fa-google"></i>
+                    تسجيل دخول بواسطة جوجل
+                </a>
+            </div>
             <p>بالتسجيل أنت توافق على سياسة الخصوصية والشروط والأحكام</p>
         </div>
 
