--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -30,7 +30,6 @@ html {
 
 body {
     background: #FBFBFD;
-    min-height: 100vh;
 }
 
 /* End Global Rules */
@@ -238,21 +237,30 @@ header .cta .btn {
     z-index: 10000;
 }
 
+.menu-parent {
+    cursor: pointer;
+    user-select: none;
+}
+
+.sub-menu {
+    display: none;
+}
+
 
 
 /* main style */
 
 main {
-    height: calc(100vh - 80px); 
+    min-height: calc(100vh - 80px); 
     /* background: url("../assets/images/main-img1.jpg"); */
     background-position: center center;
     background-repeat: no-repeat !important;
-    background-size: cover; 
-    background-attachment: fixed;
+    background-size: cover !important;
     max-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 main::after {
     content: "";
@@ -277,19 +285,26 @@ main .container .intro-title {
     color: #f9f9f9;
 }
 
-main .search {
-    position: relative;
+main form {
     width: 630px;
+}
+main .search {
+    width: 100%;
+    position: relative;
+    margin: 0 auto;
 }
 
 main .search input {
-    width: 100%; 
+    max-width: 100%; 
+    width: 100%;
     height: 50px; 
     padding: 0 2rem;
+    margin: 0 auto;
     border-radius: 50px;
     outline: none; 
     border:none; 
     color: #323232;
+    position: relative;
 }
 
 main .search img {
@@ -324,6 +339,7 @@ main .header-cta {
     main .header-cta .btn {
         width: fit-content;
     }   
+
 
 
 }
@@ -409,13 +425,13 @@ main .header-cta {
 
 
 /* this is main responsive rules for container */
-.container {margin: 0 auto; margin-bottom: 1rem;}
+.container {margin: 0 auto; margin-bottom: 1rem; height: fit-content;}
 /* // Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) { 
     .container {
         width: 90% !important;
     }
-    main .search {
+    main form {
         position: relative;
         width: 90%;
     }
@@ -428,6 +444,8 @@ main .header-cta {
     }
     main .search {
         position: relative;
+    }
+    main form {
         width: 90%;
     }
  } 
@@ -436,6 +454,16 @@ main .header-cta {
 @media (min-width: 768px) and (max-width: 991.98px) { 
     .container {
         width: 780px !important;
+    }
+    main form {
+        width: 80%;
+    }
+    main .search {
+        width: 100%;
+        margin: 0 auto;
+    }
+    main .search input {
+        width: 100% !important; 
     }
  }
 
@@ -465,7 +493,8 @@ main .header-cta {
 
 .swiper-pagination {
     position: relative;
-    margin-top: 1rem;
+    display: none;
+    margin-top: 10px;
 }
 
 .book {
@@ -559,4 +588,9 @@ form .input i {
     list-style: none;
     padding: 1rem;
     user-select: none;
+}
+
+
+.checked {
+    color: orange;
 }
